--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "KProxy",
   "version": "1.0.0",
-  "description": "一个简洁优雅的 Chrome 代理管理工具",
+  "description": "Simple and elegant proxy management for Chrome",
   "author": "KINGX",
   "action": {
     "default_popup": "popup/popup.html"
